chore: update code for auto-boxing